# vehicle_insurance_project

./: pyproject.toml  setup.py
note_book/: exp-notebook.ipynb  mongoDB_demo.ipynb
project_env/: pyvenv.cfg
project_env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/pipline/: training_pipeline.py
